--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 
 <div class="main-content">
     {{>header}}
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis eligendi fugiat odio officia rem repudiandae sapiente veniam. Adipisci amet animi eum neque quasi sit totam. Delectus facere hic molestias quam!</p>
+    <p>This site was created using data from mapbox.com and darksky.net</p>
     <img src="./img/robot.png" alt="" class="robot">
 </div>
 
